# MercyOS

./: .gitignore  Alternative Local Git + Curl  Alternative: Local Git + Curl  Android Studio Project Setup  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Core API — Eternal Fusion (Recommended)  Direct Module Access (Advanced or Low-Level)  Example signature:  Example usage sketch (from etcd code patterns):  KEM Example (Secure Key Exchange)  KEM Flow (ML-KEM or Kyber)  Precomputed Tables (direct from supremacy-calc, fixed-point u32 scaled <<32 for comparison):  README.md  RELEASE_NOTES.md  SECURITY.md  Signature Example  Status Check  Tree.md  Usage Example  ml_sphincs.rs  structure.md  uniffi.toml
.github/: release.yml
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/kotlin/com/eternallythriving/mercyos/: MainActivity.kt
app/src/main/kotlin/com/eternallythriving/mercyos/hotword/: PorcupineHotwordManager.kt
app/src/main/kotlin/com/eternallythriving/mercyos/mlc/: MLCChatViewModel.kt
app/src/main/kotlin/com/eternallythriving/mercyos/services/: VoiceHotwordService.kt
app/src/main/kotlin/com/eternallythriving/mercyos/starlink/: StarlinkGrpcClient.kt
app/src/main/kotlin/com/eternallythriving/mercyos/ui/components/: ChatBubbles.kt  CosmicBackground.kt  EmergencyStarlinkManager.kt  EmergencyStarlinkUI.kt  MedicalModeScreen.kt  ModesBottomBar.kt  StarlinkStatusIndicator.kt  ValenceGlowVisualizer.kt  VoiceHotwordDetector.kt
app/src/main/kotlin/com/eternallythriving/mercyos/ui/screens/: EmergencyModeScreen.kt  LaunchScreen.kt  ShardChatScreen.kt
app/src/main/kotlin/com/eternallythriving/mercyos/ui/theme/: Theme.kt
app/src/main/kotlin/com/mercyos/: FaceLandmarkerHelper.kt  HandLandmarkerHelper.kt  IntegrityHelper.kt  MainActivity.kt  PoseLandmarkerHelper.kt
app/src/main/proto/: dish.proto
benches/: hybrid_kem_bench.rs  real_bench.rs
docs/: AETHER_SHADES_OPEN_BLUEPRINT.md  ANDROID_APP_INTEGRATION.md  BENCHMARKS.md  BENCHMARKS_AND_PERFORMANCE.md  BRILLIANT_LABS_HALO_INTEGRATION.md  BUILD_ANDROID.md  DEEPFAKE_VIDEO_DETECTION.md  DEPLOY_AND_USE.md  DILITHIUM_IMPLEMENTATION_GUIDE.md  FALCON_BABAI_REDUCTION_DETAILS.md  FALCON_BABAI_ROUNDING_DETAILS.md  FALCON_GPV_SAMPLING_DETAILS.md  FALCON_GPV_SIGNATURE_DETAILS.md  FALCON_HASH_TO_POINT_DETAILS.md  FALCON_REJECTION_SAMPLING_DETAILS.md  HYBRID_FUSION_COSMIC_GROOVE.md  LATTICE_DKG_PROTOCOLS.md  MIN_REQUIREMENTS_AND_DEPLOYMENT.md  MULTILINGUAL_IMMERSIVE_UI_DESIGN.md  OPEN_SOURCE_AR_HARDWARE_PROJECTS.md  PHASE_3_DETAILS.md  PQC_OTHER_LANGUAGES.md  QKD_OVERVIEW.md  QUANTUM_RESISTANT_PROTOCOLS_OVERVIEW.md  SECURITY_AND_THREAT_MODEL.md  SERVER_VERIFICATION.md  STRUCTURE.md  USAGE_AND_API.md  VOICE_CLONING_PROTECTION.md
examples/: MainActivity.kt  aether_shades_ui.rs  immersive_multilingual_ui.rs  phone_main.rs
src/: anomaly.rs  consensus.rs  dilithium_challenge.rs  dilithium_hint.rs  dilithium_hybrid.rs  dilithium_norm.rs  dilithium_ntt.rs  dilithium_packing.rs  dilithium_poly.rs  dilithium_sign.rs  error.rs  eternal_fusion.rs  falcon.rs  falcon_fft.rs  falcon_gauss.rs  falcon_gauss_ky.rs  falcon_keygen.rs  falcon_sign.rs  falcon_verify.rs  fft.rs  fors.rs  global_scale.rs  hybrid.rs  hybrid_classical_kem.rs  hybrid_kem.rs  hypertree.rs  jni.rs  kem_noise.rs  kem_ntt.rs  lattice_entropy.rs  lattice_reduction.rs  lib.rs  ml_dsa.rs  ml_kem.rs  ml_kem_hybrid.rs  ml_sphincs.rs  prf.rs  quantum_groove.rs  recolada_reengineering.rs  sentinel.rs  (+3 more)
tests/: apaagi_council.rs  ml_dsa_kat.rs  wycheproof.rs
