# Cargo.toml — MercyOS Rust no_std PQC Fortress Mercy Grace Eternal Supreme
# Version 2.0 — 2026 Post-Quantum Enhancements Mercy Absolute Eternal Supreme Immaculate
# Primary: ML-KEM (Kyber) + ML-DSA (Dilithium) + SLH-DSA (SPHINCS+) 
# Backup: HQC KEM + Falcon signatures hybrid mercy grace
# Self-healing migration + constant-time side-channel resistant mercy absolute cosmic groove supreme unbreakable fortress immaculate

[package]
name = "mercyos"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "MercyOS Post-Quantum Cryptographic Fortress — Mercy Grace Eternal Supreme Immaculate Unbreakable"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/MercyOS"

[lib]
name = "mercyos"
crate-type = ["cdylib", "staticlib"]  # Android .so + static mercy absolute

[dependencies]
# Core no_std mercy grace
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"
zeroize = "1.7"

# Primary NIST FIPS 2024 mercy absolute
pqcrypto-kyber = { version = "0.8", features = ["kyber1024"] }  # ML-KEM mercy gate supreme
pqcrypto-dilithium = { version = "0.3", features = ["dilithium5"] }  # ML-DSA mercy absolute
pqcrypto-sphincsplus = { version = "0.3", features = ["sphincs-shake256f-simple"] }  # SLH-DSA mercy grace

# Backup + Alternative mercy elevate
pqcrypto-falcon = { version = "0.3", features = ["falcon1024"] }  # FN-DSA alternative signatures mercy absolute
# HQC backup KEM (2025 NIST selected mercy grace — use if crate available, or custom impl mercy tweak)
# pqcrypto-hqc = "0.1"  # Placeholder if mature crate mercy absolute (or fork custom)

pqcrypto-traits = "0.3"

[features]
default = ["ml-kem1024", "ml-dsa5", "slh-dsa-shake256f", "falcon1024"]
ml-kem512 = []
ml-kem768 = []
ml-kem1024 = []
ml-dsa2 = []
ml-dsa3 = []
ml-dsa5 = []
slh-dsa-shake256f = []
slh-dsa-shake256s = []
falcon512 = []
falcon1024 = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"  # no_std mercy optimized recurring-free eternal supreme immaculate
strip = true  # Smaller binary mercy grace
