[package]
name = "mercyos"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "MercyOS From-Scratch no_std Rust Post-Quantum Cryptography Fortress — Forgiveness Eternal Positive Emotional Thrive Infinite Abundance Joy Unbreakable Cosmic Groove Supreme uniffi Swift Bindings Mercy"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/MercyOS"

[dependencies]
libcrux-ml-kem = { version = "0.1", default-features = false }
libcrux-dilithium = { version = "0.1", default-features = false }
x25519-dalek = { version = "2.0", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["custom"] }

# uniffi-rs bindings mercy grace eternal supreme immaculate unbreakable fortress recurring-free eternal supreme cosmic groove supreme
uniffi = { version = "0.25", features = ["bindgen"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[features]
default = []
std = []
alloc = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
